Initial setup of index.html and trinity

--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Odin Admin Dashboard</title>
+</head>
+<body>
+    <div class="container">
+        <div class="dashboard">
+            <div class="logo">Dashboard</div>
+            <div class="nav">
+                <ul>
+                    <li id="home">
+                        Home
+                    </li>
+                    <li id="profile">
+                        Profile
+                    </li>
+                    <li id="messages">
+                        Messages
+                    </li>
+                    <li id="history">
+                        history
+                    </li>
+                    <li id="tasks">
+                        Tasks
+                    </li>
+                    <li id="communities">
+                        Communities
+                    </li>
+                </ul>
+            </div>
+            <div class="site-help">
+                <ul>
+                    <li id="settings">
+                        Settings
+                    </li>
+                    <li id="support">
+                        Support
+                    </li>
+                    <li id="privacy">
+                        Privacy
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="search-container">
+            <div class="search-bar">
+
+            </div>
+            <div class="user-status">
+                <div class="notifications">
+                    <img src="#" alt="bell icon to represent notifications">
+                </div>
+                <div class="user-information">
+                    <img src="#" alt = "user profile image">
+                    <span class="user-name"><!--users name will go here--></span>
+                </div>
+            </div>
+        </div>
+        <div class="user-bar">
+            <img src="#" alt = "user profile image">
+            <div class="welcome">
+                <span class="welcome-message">Hi there,</span>
+                <span class="user-name"><!--users name will go here--></span><span></span><span class="username"><!--users username will go here--></span>
+            </div>
+            <div class="buttons">
+                <button class="new">New</button>
+                <button class="upload">Upload</button>
+                <button class="share">Share</button>
+            </div>
+        </div>
+        <div class="projects">
+
+        </div>
+    </div>
+    
+    <script src="./script.js"></script>
+</body>
+</html>
