complete dashboard layout.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         Messages
                     </li>
                     <li id="history">
-                        history
+                        History
                     </li>
                     <li id="tasks">
                         Tasks
@@ -47,16 +47,14 @@
             </div>
         </div>
         <div class="search-container">
-            <div class="search-bar">
-
-            </div>
+            <input type="text" class="search-bar"></input>
             <div class="user-status">
                 <div class="notifications">
                     <img src="#" alt="bell icon to represent notifications">
                 </div>
                 <div class="user-information">
                     <img src="#" alt = "user profile image">
-                    <span class="user-name"><!--users name will go here--></span>
+                    <span class="user-name">Loading User Info...</span>
                 </div>
             </div>
         </div>
@@ -64,7 +62,7 @@
             <img src="#" alt = "user profile image">
             <div class="welcome">
                 <span class="welcome-message">Hi there,</span>
-                <span class="user-name"><!--users name will go here--></span><span></span><span class="username"><!--users username will go here--></span>
+                <p class="user-name">Loading User Info...</p><span></span><span class="username"><!--users username will go here--></span>
             </div>
             <div class="buttons">
                 <button class="new">New</button>
