Work on layout.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
             </div>
         </div>
         <div class="search-container">
+            <img src="./assets/icons/search.svg">
             <input type="text" class="search-bar"></input>
             <div class="user-status">
                 <div class="notifications">
-                    <img src="#" alt="bell icon to represent notifications">
+                    <img src="./assets/icons/bell-ring.svg" alt="bell icon to represent notifications">
                 </div>
                 <div class="user-information">
                     <img src="#" alt = "user profile image">
