--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="dashboard">
-            <div class="logo">Dashboard</div>
+            <div class="logo"><img src="./assets/icons/dashboard.svg" height="30em"><span> Dashboard</span></div>
             <div class="nav">
                 <ul>
                     <li id="home">
@@ -72,7 +72,67 @@
             </div>
         </div>
         <div class="projects">
-
+            <div id="your-projects">
+                <div class="project" id="super-cool-project">
+                    <h2>Super Cool Project</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                    <div class="project-links">
+                        <a id="favorite" href="#"><img src="./assets/icons/star-plus.svg"></a>
+                        <a id="watch" href="#"><img src="./assets/icons/eye-plus.svg"></a>
+                        <a id="fork">
+                            <img src="./assets/icons/source-fork.svg">
+                        </a>
+                    </div>
+                </div>
+                <div class="project" id="less-cool-project">
+                    <h2>Less Cool Project</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                    <div class="project-links">
+                        <a id="favorite" href="#"><img src="./assets/icons/star-plus.svg"></a>
+                        <a id="watch" href="#"><img src="./assets/icons/eye-plus.svg"></a>
+                        <a id="fork">
+                            <img src="./assets/icons/source-fork.svg">
+                        </a>
+                    </div>
+                </div>
+                <div class="project" id="impossible-project">
+                    <h2>Imossible Project</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                </div>
+                <div class="project" id="easy-peasy-app">
+                    <h2>Easy Peasy App</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                    <div class="project-links">
+                        <a id="favorite" href="#"><img src="./assets/icons/star-plus.svg"></a>
+                        <a id="watch" href="#"><img src="./assets/icons/eye-plus.svg"></a>
+                        <a id="fork">
+                            <img src="./assets/icons/source-fork.svg">
+                        </a>
+                    </div>
+                </div>
+                <div class="project" id="ad-blocker">
+                    <h2>Ad Blocker</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                    <div class="project-links">
+                        <a id="favorite" href="#"><img src="./assets/icons/star-plus.svg"></a>
+                        <a id="watch" href="#"><img src="./assets/icons/eye-plus.svg"></a>
+                        <a id="fork">
+                            <img src="./assets/icons/source-fork.svg">
+                        </a>
+                    </div>
+                </div>
+                <div class="project" id="money-maker-project">
+                    <h2>Money Maker</h2>
+                    <p>Sed tempus ut lacius ut scelerque. Superstendus sollcidium nibh erst, id faciliisi, felis accumennec.</p>
+                    <div class="project-links">
+                        <a id="favorite" href="#"><img src="./assets/icons/star-plus.svg"></a>
+                        <a id="watch" href="#"><img src="./assets/icons/eye-plus.svg"></a>
+                        <a id="fork">
+                            <img src="./assets/icons/source-fork.svg">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
